--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
           font-size: 3.5rem;
         }
       }
+	  img {
+		  border-radius: 25px;
+		}
+	  .carousel-caption {
+			background-color: rgba(255,255,255,0.50);
+			border-radius: 25px;
+			padding: 25px;
+		}
     </style>
 
     
@@ -78,12 +86,11 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
          <img src="static/img/img_teste.jpg" class="d-block w-100" alt="">
-
         <div class="container">
-          <div class="carousel-caption text-start">
+          <div class="carousel-caption">
             <h1 class="text-dark">Manutenção do seu Celular.</h1>
-            <p class="text-dark">Traga seu celular, tablete ou E-reader. Temos o melhor preço do mercado, com o melhor serviço .</p>
-            <p><a class="btn btn-lg btn-primary" href="#servicos_celular" role="button">Saiba mais ...</a></p>
+            <p class="text-dark">Traga seu celular, tablete ou E-reader. Temos o melhor preço do mercado, com o melhor serviço.</p>
+            <p><a class="btn btn-lg btn-primary" href="#servicos_celular" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -93,7 +100,7 @@
           <div class="carousel-caption">
             <h1 class="text-dark">Traga o seu computador.</h1>
             <p class="text-dark">Temos todos os serviços para deixar seu computador novinho em folha.</p>
-            <p><a class="btn btn-lg btn-primary" href="#servico_computador" role="button">Saiba mais ...</a></p>
+            <p><a class="btn btn-lg btn-primary" href="#servico_computador" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -101,9 +108,9 @@
          <img src="static/img/mesa_som.jpeg" class="d-block w-100" alt="">
         <div class="container">
           <div class="carousel-caption">
-            <h1 class="text-white text-center bg-dark">Equipamento de som em Geral.</h1>
-            <p class="text-white  bg-dark">Damos suporte a todos os equipamentpos de som, não deixe de nos procurar.</p>
-            <p><a class="btn btn-lg btn-primary" href="#servicos_som" role="button">Saiba mais ...</a></p>
+            <h1 class="text-dark">Equipamento de som em Geral.</h1>
+            <p class="text-dark">Damos suporte a todos os equipamentpos de som, não deixe de nos procurar.</p>
+            <p><a class="btn btn-lg btn-primary" href="#servicos_som" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -112,9 +119,9 @@
         <img src="static/img/microwave.png" class="d-block w-100" alt="">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Micro-ondas e outras equipamentos.</h1>
-            <p>Não deixe de nos consultar e trazer seu equipamento. Serviço de manutenção em geral</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais ...</a></p>
+            <h1 class="text-dark">Micro-ondas e outras equipamentos.</h1>
+            <p class="text-dark">Não deixe de nos consultar e trazer seu equipamento. Serviço de manutenção em geral.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -124,9 +131,9 @@
         <img src="static/img/placa_mae.jpeg" class="d-block w-100" alt="">
         <div class="container">
           <div class="carousel-caption">
-            <h1>Eletrônica em geral.</h1>
-            <p>Nosso forte é a eletrônica, traga seu equipamento, que nós fazemos um orçamento.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais ...</a></p>
+            <h1 class="text-dark">Eletrônica em geral.</h1>
+            <p class="text-dark">Nosso forte é a eletrônica, traga seu equipamento, que nós fazemos um orçamento.</p>
+            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -187,19 +194,19 @@
 	        	<div class="col-md-6">
 
 	        		<ul class="list-ico">
-			        	<li>Desbloquio de Celular./li>
+			        	<li>Desbloqueio de celular.</li>
 			        	<li>Desoxidação de celular.</li>
-			        	<li>Substituição de tela (Frontal).</li>
+			        	<li>Substituição de tela.</li>
 			        	<li>Substituição do touch screem.</li>
-			        	<li>Trocade bateria.</li>
+			        	<li>Troca de bateria.</li>
 			        	<li>Troca de conectores de carga.</li>
 		        	</ul>
 	        	</div>
 	        	<div class="col-md-6">
 	        		<ul class="list-ico">
 		        		<li>Reparo da Placa Principal.</li>
-			        	<li>Auto falantes e Microfone.</li>
-			        	<li>Restauração do Software.</li>
+			        	<li>Auto falantes e Microfones.</li>
+			        	<li>Restauração de Software.</li>
 			        	<li>Atualização de Firmware.</li>
 			        	<li>Botões de Power e Volume.</li>
 			        	<li>Câmera e Campainha.</li>
@@ -221,8 +228,8 @@
 
     <div class="row featurette" id="servico_computador">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Todos os serviços para o seu computador. <span class="text-muted">Trabaçhamos com tadas as marcas e fabricantes.</span></h2>
-        <p class="lead">Prestamos assistencia técnica para desktops, notebboeks, servidores, ....</p>
+        <h2 class="featurette-heading">Todos os serviços para o seu computador. <span class="text-muted">Trabalhamos com tadas as marcas e fabricantes.</span></h2>
+        <p class="lead">Prestamos assistência técnica para desktops, notebooks, servidores, ....</p>
 
         	<div class="row">
 	        	<div class="col-md-6">
@@ -231,7 +238,7 @@
 			        	<li>Atualização de BIOS.</li>
 			        	<li>Formatação e instalação.</li>
 			        	<li>Montagem de PC.</li>
-			        	<li>Troca de pasta termica.</li>
+			        	<li>Troca de pasta térmica.</li>
 			        	<li>Upgrade.</li>
 			        	<li>Limpeza interna.</li>
 		        	</ul>
