--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           font-size: 3.5rem;
         }
       }
-	  img {
+	  .imagem {
 		  border-radius: 25px;
 		}
 	  .carousel-caption {
@@ -219,7 +219,7 @@
 
       </div>
       <div class="col-md-5">
-         <img src="static/img/manutencao_celular2.jpg" class="d-block w-100" width="500" height="500" alt="">
+         <img src="static/img/manutencao_celular2.jpg" class="imagem d-block w-100" width="500" height="500" alt="">
 
       </div>
     </div>
@@ -258,7 +258,7 @@
 	        </div>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="static/img/computador_partes.jpg" class="d-block w-100" width="500" height="500" alt="">
+        <img src="static/img/computador_partes.jpg" class="imagem d-block w-100" width="500" height="500" alt="">
 
       </div>
 
@@ -297,7 +297,7 @@
 	        </div>
       </div>
       <div class="col-md-5">
-        <img src="static/img/equipamentos_som.jpg" class="d-block w-100" width="500" height="500" alt="">
+        <img src="static/img/equipamentos_som.jpg" class="imagem d-block w-100" width="500" height="500" alt="">
 
       </div>
     </div>
@@ -336,7 +336,7 @@
           </div>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="static/img/servico_manutencao.jpg" class="d-block w-100" width="500" height="500" alt="">
+        <img src="static/img/servico_manutencao.jpg" class="imagem d-block w-100" width="500" height="500" alt="">
 
       </div>
 
@@ -375,7 +375,7 @@
           </div>
       </div>
       <div class="col-md-5">
-        <img src="static/img/eletronica.jpg" class="d-block w-100" width="500" height="500" alt="">
+        <img src="static/img/eletronica.jpg" class="imagem d-block w-100" width="500" height="500" alt="">
 
       </div>
     </div>
