fix style for CSS

--- a/index.html
+++ b/index.html
@@ -15,30 +15,6 @@
     <!-- Bootstrap core CSS -->
 <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-	  .imagem {
-		  border-radius: 25px;
-		}
-	  .carousel-caption {
-			background-color: rgba(255,255,255,0.50);
-			border-radius: 25px;
-			padding: 25px;
-		}
-    </style>
-
     
     <!-- Custom styles for this template -->
     <link href="static/css/carousel.css" rel="stylesheet">
@@ -121,7 +97,7 @@
           <div class="carousel-caption">
             <h1 class="text-dark">Micro-ondas e outras equipamentos.</h1>
             <p class="text-dark">Não deixe de nos consultar e trazer seu equipamento. Serviço de manutenção em geral.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
+            <p><a class="btn btn-lg btn-primary" href="#servico_microondas" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
@@ -133,7 +109,7 @@
           <div class="carousel-caption">
             <h1 class="text-dark">Eletrônica em geral.</h1>
             <p class="text-dark">Nosso forte é a eletrônica, traga seu equipamento, que nós fazemos um orçamento.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Saiba mais</a></p>
+            <p><a class="btn btn-lg btn-primary" href="#servicos_eletronica" role="button">Saiba mais</a></p>
           </div>
         </div>
       </div>
