corrigindo arquivo img

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-<<<<<<< HEAD
-         <img src="static/img/img_teste.jpg" class="img-fluid d-block w-100" alt="">
-=======
+
+<!--        <img src="static/img/img_teste.jpg" class="img-fluid d-block w-100" alt=""> --> 
+
          <img src="static/img/img_teste.jpg" class="d-block w-100 img-fluid" alt="">
->>>>>>> 802b039e2b66acc5b44cd660d7688d6e802345fd
+
         <div class="container">
           <div class="carousel-caption">
             <h1 class="text-dark">Manutenção do seu Celular.</h1>
